# kaggle

./: .gitignore  pyproject.toml
competitions/criteo-uplift/: CHEATSHEET.md  RETROSPECTIVE.md
competitions/criteo-uplift/docs/: PLAN.md
competitions/criteo-uplift/results/models/: 01_eda.txt  02_naive_baselines.txt  03_s_learner.txt  04_t_learner.txt  05_x_learner.txt  06_model_comparison.txt  08_targeting_analysis.txt
competitions/criteo-uplift/scripts/modeling/: 02_naive_baselines.py  03_s_learner.py  04_t_learner.py  05_x_learner.py  06_model_comparison.py  08_targeting_analysis.py
competitions/criteo-uplift/scripts/preprocessing/: 01_eda.py
competitions/disaster-tweets/: RETROSPECTIVE.md
competitions/disaster-tweets/docs/: ATTENTION_IS_ALL_YOU_NEED.md  PLAN.md
competitions/disaster-tweets/results/models/: 01_eda.txt  02_bow_baselines.txt  03_text_preprocessing.txt  (+5 more)
competitions/disaster-tweets/submissions/: bert_v1.csv  ensemble_v1.csv  glove_v1.csv  tfidf_v1.csv
competitions/house-prices/: RETROSPECTIVE.md
competitions/house-prices/docs/: PLAN.md
competitions/house-prices/submissions/: blend_final.csv  elasticnet_tuned_no_outliers.csv  ridge_baseline.csv  ridge_log_target.csv  two_feature.csv  xgboost_tuned.csv
competitions/marketing-mix/: CHEATSHEET.md  RETROSPECTIVE.md
competitions/marketing-mix/docs/: PLAN.md
competitions/titanic/: BEST_MODEL.md  NEXT_STEPS.md  NOTES.md  RETROSPECTIVE.md  STATE_OF_WORLD.md
competitions/titanic/submissions/: logreg_18_18b_hybrid_2mate.csv  logreg_19_19b_ticket_surname.csv
shared/: evaluate.py
(+163 files in other folders)
